# text-sumarization

./: .env  .gitignore  requirements.txt
.compass/: session.json
.compass/cache/: gitignore-cache.json
.compass/index/: file-index.json
.compass/logs/: llm-16-07-26.jsonl  system-16-07-26.jsonl
bao-cao/: Lường Tiến Dũng - B22DCCN128 - Bao_cao_thuc_tap_Tuan3_4.docx  build_report_tuan3_4.py
data/: summarization_samples.json
docs/: Ke_hoach_Thuc_tap_Tom_tat_Van_ban.md  parameters.md  require.md
src/Seq2Seq/: lstm_attention_demo.ipynb  test_predictions.csv
tuan 3-4/: .gitignore  README.md  requirements.txt  tesst_local.ipynb  test_with_colab.ipynb  week34_inference_and_data.ipynb
tuan 3-4/src/: data.py  (+3 more)
tuan 3-4/summarization/: README.md  pyproject.toml
tuan 3-4/summarization/data/raw/: vietnews_medical_raw_1000.csv
tuan 3-4/summarization/notebooks/: week34_inference_and_data.ipynb
tuan 3-4/summarization/results/: vit5_sample_5.json
tuan 3-4/summarization/scripts/: prepare_raw_dataset.py  run_inference_and_rouge.py
tuan 3-4/summarization/src/week34_summarization/: __init__.py  data.py  metrics.py  model.py  text.py
tuan 3-4/summarization/tests/: test_data_and_metrics.py
tuan1-2/text-sumarization/: README.md  pyproject.toml  run_on_cloud.ipynb  trainner.ipynb
tuan1-2/text-sumarization/configs/: bartpho.yaml  mt5_base.yaml  vit5_base.yaml  vit5_base_lora.yaml  vit5_warmstart.yaml
tuan1-2/text-sumarization/scripts/: check_tokenizer.py  evaluate.py  predict.py  train.py
tuan1-2/text-sumarization/vn_summarization/: __init__.py  config.py  data.py  evaluator.py  model.py  predict.py  trainer.py  utils.py
(+27 files in other folders)
