[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vn-summarization-week34"
version = "0.1.0"
description = "Week 3-4: pretrained Vietnamese summarization inference, ROUGE, and raw-data preparation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.3",
    "transformers>=4.45,<5",
    "sentencepiece>=0.2",
    "pandas>=2.0",
    "rouge-score>=0.1.2",
]

[project.optional-dependencies]
hf = ["datasets>=2.20"]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
where = ["src"]
